--- a/src/App.css
+++ b/src/App.css
@@ -1,66 +1,141 @@
 .App {
-  text-align: center;
+
+
 }
 
 .home-container {
-  padding: 10px 50px;
+  /*padding: 10px 50px;*/
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: space-between;
-  margin: 0 auto;
+
   min-height: 300px;
-  letter-spacing: 15px;
-  background-size: 60%;
+  max-height: 130vh;
+
+  z-index: -1;
+/*  background-size: 60%;
+*/
 }
 
-.name-title{
-  width: 98%;
-  margin-top: 3%;
-  text-align: center;
-  align-self: center;
-  margin-bottom: 30px;
-}
 
 .my-photo{
-  margin-top: 30px;
-  height: 200px;
-  width: 200px;
+  position: fixed;
+  height: 40vh;
+  width: 100vw;
   align-self: center;
-  background-image: url('./photo/me.jpg');
+  background-image: url('./photo/ladies4.jpg');
   background-size: cover;
-  background-position: center;
-  border-radius: 100px;
+  background-position: center right;
+  background-repeat: no-repeat;
+  z-index: 0;
 }
 
-.name {
-  text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;
-  font-size: 5vw;
-  padding: 20px;
-}
-
-.email {
-  font-size: 19px;
-  margin-top: 20px;
-  letter-spacing: 0.5px;
-}
-
-.options {
+.skills{
+  margin-top: 2vh;
+  position: fixed;
+  z-index: -1;
   display: flex;
-  justify-content: flex-start;
-  margin-top: 10px;
-  padding-top: 20px;
-  font-weight: 300;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #ef00a6;
+  height: 80vh;
+  width: 100vw;
+  background-image: url('./photo/fun.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.options a {
-  padding-left: 15px;
-  font-size: 20px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  color: black;
+
+.travel-border{
+  margin-top: 11vh;
+  position: fixed;
+  z-index: -1;
+  background-color: red;
+  height: 20vh;
+  width: 100vw;
+  background-image: url('./photo/border.png');
+  background-size: contain;
+  background-position: bottom;
+  background-color: white;
 }
 
-.options a:hover{
-  font-weight: bold;
+.links {
+  height: 80vh;
+  width: 100vw;
+  overflow: hidden;
+  background-image: url('./photo/selfie4.png');
+  background-color: white;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+
+.relocate {
+  height: 50vh;
+  width: 100vw;
+  overflow: hidden;
+  background-image: url('./photo/location1.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #ffeaf4;
+  background-position: center;
+  z-index: -5;
+}
+
+.work {
+  margin-top: 8vh;
+  height: 30vh;
+  width: 100vw;
+  color: white;
+  background-color:#7dc3f0;
+  font-size: 2vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 50;
+  flex-wrap: wrap;
+}
+
+.work ul li {
+  list-style: none;
+  font-size: 100vh;
+}
+
+.project1 {
+  z-index: 1;
+  height: 50vh;
+  width: 100vw;
+  margin-top: 10vh;
+  background-color: #ffb8ea;
+  display: flex;
+  justify-content: space-between;
+}
+
+.project2 {
+  height: 50vh;
+  width: 100vw;
+  background-color: #ffb8ea;
+}
+
+.ns {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 6vw;
+  letter-spacing: 1vw;
+  height: 40vh;
+  width: 100vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 20;
+}
+.bottom {
+  height: 20vh;
+  width: 100vw;
 }
