--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,30 @@
   justify-content: space-between;
 
   min-height: 300px;
-  max-height: 130vh;
+  max-height: 200vh;
 
   z-index: -1;
 /*  background-size: 60%;
 */
 }
 
+.my-projects {
+  height: 100vh;
+  width: 100vw;
+  background-color: #c5edf9;
+  z-index: 0;
+  display: flex;
+}
 
+.my-projects h1 {
+  color: #1b77cc;
+  text-shadow: 4px 4px yellow;
+  font-size: 5em;
+}
+
+.carosel {
+  width: 50vw;
+}
 .my-photo{
   position: fixed;
   height: 40vh;
@@ -38,27 +54,27 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
+
   background-color: #ef00a6;
-  height: 80vh;
+  height: 90vh;
   width: 100vw;
   background-image: url('./photo/fun.png');
   background-size: contain;
   background-position: center;
-  background-repeat: no-repeat;
+
 }
 
 
 .travel-border{
-  margin-top: 11vh;
+  margin-top: 8vh;
   position: fixed;
   z-index: -1;
-  background-color: red;
+  background-color: #fbfefc;
   height: 20vh;
   width: 100vw;
-  background-image: url('./photo/border.png');
+
   background-size: contain;
-  background-position: bottom;
+  background-position: center;
   background-color: white;
 }
 
@@ -72,8 +88,56 @@
   background-size: contain;
   background-repeat: no-repeat;
   z-index: 1;
+
 }
 
+.uni{
+    background-color: white;
+    background-image: url('./photo/uni.gif');
+    height: 15vh;
+    width: 100vw;
+    background-size: contain;
+    background-repeat: no-repeat;
+    color: pink;
+    display: flex;
+    justify-content: center;
+    background-position: center;
+}
+.github{
+
+  height: 30vh;
+  width: 30vh;
+  margin-top: 14vh;
+  margin-left: 25vw;
+}
+
+.github:hover {
+  background-image: url('./photo/sparkle.gif');
+  background-size: contain;
+}
+.twitter{
+  height: 30vh;
+  width: 30vh;
+  margin-top: -25vh;
+  margin-left: 15vw;
+}
+
+.twitter:hover {
+  background-image: url('./photo/sparkle.gif');
+  background-size: contain;
+}
+
+.linkedin{
+  height: 30vh;
+  width: 30vh;
+  margin-top: -6vh;
+  margin-left: 60vw;
+}
+
+.linkedin:hover {
+  background-image: url('./photo/sparkle.gif');
+  background-size: contain;
+}
 
 .relocate {
   height: 50vh;
@@ -86,13 +150,56 @@
   background-position: center;
   z-index: -5;
 }
-
+.github-stalker{
+   height: 50vh;
+  width: 100vw;
+  overflow: hidden;
+  background-image: url('./photo/stalker11.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: white;
+  background-position: center;
+  z-index: -5;
+}
+.github-battle {
+  height: 50vh;
+  width: 100vw;
+  overflow: hidden;
+  background-image: url('./photo/nij.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #6484a9;
+  background-position: center;
+  z-index: -5;
+}
+.connect-four {
+  height: 50vh;
+  width: 100vw;
+  overflow: hidden;
+  background-image: url('./photo/c.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: white;
+  background-position: center;
+  z-index: -5;
+}
+.sea-bnb {
+   height: 50vh;
+  width: 100vw;
+  overflow: hidden;
+  background-image: url('./photo/sea.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #4990E2;
+  background-position: center;
+  z-index: -5;
+}
 .work {
-  margin-top: 8vh;
+  margin-top: 7vh;
   height: 30vh;
   width: 100vw;
   color: white;
-  background-color:#7dc3f0;
+  background-color:#c5edf9;
   font-size: 2vw;
   display: flex;
   align-items: center;
@@ -105,6 +212,22 @@
   list-style: none;
   font-size: 100vh;
 }
+
+.projects {
+  margin-top: 7vh;
+  height: 30vh;
+  width: 100vw;
+  color: white;
+  background-color:#cfd8dc;
+  font-size: 3vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 50;
+  flex-wrap: wrap;
+}
+
+.
 
 .project1 {
   z-index: 1;
@@ -136,6 +259,6 @@
   z-index: 20;
 }
 .bottom {
-  height: 20vh;
+  height: 15vh;
   width: 100vw;
 }
