--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
 
 .options {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin-top: 10px;
   padding-top: 20px;
   font-weight: 300;
